# g4fluka

./: .gitignore  CMakeLists.txt  README.md  g4fluka.cc  generate_all_plots.py  plot_comparison.py  setup.sh
condor/: g4fluka.sub  g4fluka_01mev.sub  g4fluka_mini.sub  g4fluka_mini_retry.sub  joblist.txt  joblist_01mev.txt  joblist_mini.txt  joblist_mini_retry.txt  run_g4fluka.sh
imports/: BdxCHad_FLUKA_BPE_10p5cm_10MeV_proThOff_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_10MeV_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_1MeV_proThOff_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_1MeV_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_200MeV_proThOff_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_200MeV_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_500MeV_proThOff_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_500MeV_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_50MeV_proThOff_tab.lis  BdxCHad_FLUKA_BPE_10p5cm_50MeV_tab.lis  BdxCHad_FLUKA_W_50cm_10MeV_proThOff_tab.lis  BdxCHad_FLUKA_W_50cm_200MeV_proThOff_tab.lis  BdxCHad_FLUKA_W_50cm_500MeV_proThOff_tab.lis  BdxElec_FLUKA_BPE_10p5cm_0p1MeV_protThresTest_tab.lis  BdxElec_FLUKA_BPE_10p5cm_0p1MeV_tab.lis  BdxElec_FLUKA_BPE_10p5cm_10MeV_proThOff_tab.lis  BdxElec_FLUKA_BPE_10p5cm_10MeV_tab.lis  BdxElec_FLUKA_BPE_10p5cm_1MeV_proThOff_tab.lis  BdxElec_FLUKA_BPE_10p5cm_1MeV_tab.lis  BdxElec_FLUKA_BPE_10p5cm_200MeV_proThOff_tab.lis  BdxElec_FLUKA_BPE_10p5cm_200MeV_tab.lis  BdxElec_FLUKA_BPE_10p5cm_500MeV_proThOff_tab.lis  BdxElec_FLUKA_BPE_10p5cm_500MeV_tab.lis  BdxElec_FLUKA_BPE_10p5cm_50MeV_proThOff_tab.lis  BdxElec_FLUKA_BPE_10p5cm_50MeV_tab.lis  BdxElec_FLUKA_W_50cm_0p1MeV_proThOff_tab.lis  (+108 more)
include/: DetectorMessenger.hh  (+7 more)
(+37 files in other folders)
